force-app/main/default/objects/Opportunity/fields/asxaxsdda__c.field-meta.xml
<CustomField>
    <fullName>asxaxsdda__c</fullName>
    <label>asxaxsdda</label>
    <length>255</length>
    <type>Text</type>
</CustomField>