force-app/main/default/objects/Opportunity/fields/dscscx__c.field-meta.xml
<CustomField>
    <fullName>dscscx__c</fullName>
    <label>dscscx</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>