force-app/main/default/objects/Opportunity/fields/mmm__c.field-meta.xml
<CustomField>
    <fullName>mmm__c</fullName>
    <label>mmm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>