force-app/main/default/objects/Opportunity/fields/njknk__c.field-meta.xml
<CustomField>
    <fullName>njknk__c</fullName>
    <label>njknk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>