force-app/main/default/objects/Opportunity/fields/nnn__c.field-meta.xml
<CustomField>
    <fullName>nnn__c</fullName>
    <label>nnn11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>