force-app/main/default/objects/Opportunity/fields/sdcnkls__c.field-meta.xml
<CustomField>
    <fullName>sdcnkls__c</fullName>
    <label>sdcnkls</label>
    <length>255</length>
    <type>Text</type>
</CustomField>