force-app/main/default/objects/Opportunity/fields/temp1__c.field-meta.xml
<CustomField>
    <fullName>temp1__c</fullName>
    <label>temp1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>